--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -17,7 +17,7 @@
           <div class="row applyBanner py-2 px-1 mx-auto" style="">
             <div class="col-md-12">
               <h3 class="" contenteditable="true">{{entry.cardHeaderCta}}</h3>
-              <p class="lead" style="">{{entry.cardCtaBody}}<br></p>
+              <p class="lead" style="">{{entry.cardCtaBody}}</p>
               
               <a class="btn btn-block btn-lg btn-success" href="/jobs"><i class="fa fa-search"></i> &nbsp;FIND MY NEXT JOB</a>
               
