--- a/SCSS/sections/jobs/_jobs-index.scss
+++ b/SCSS/sections/jobs/_jobs-index.scss
@@ -21,7 +21,10 @@
 }
 
 .jobs-index {
-    background-color: #E2E2E2;
+    // background-color: #E2E2E2;
+    -webkit-box-shadow: inset 0px 0px 40px -2px rgba(0,0,0,0.39);
+-moz-box-shadow: inset 0px 0px 40px -2px rgba(0,0,0,0.39);
+box-shadow: inset 0px 0px 40px -2px rgba(0,0,0,0.39);
 
     h3 {
         font-weight: bold;
