--- a/SCSS/sections/jobs/_results.scss
+++ b/SCSS/sections/jobs/_results.scss
@@ -14,5 +14,13 @@
         background-position: bottom center;
         background-size: cover;
     }
+}
 
+.card{
+    -webkit-box-shadow: 0px 26px 34px -12px #000000;
+    box-shadow: 0px 26px 34px -12px #000000;
+
+    .card-title{
+        color: #6c757d;
+    }
 }
