--- a/SCSS/sections/partials/_matrix.scss
+++ b/SCSS/sections/partials/_matrix.scss
@@ -26,4 +26,11 @@
         overflow: hidden;        
         }
     }
+
+    .matrix-applyBlock{
+        a{
+            -webkit-box-shadow: 0px 23px 26px -11px rgba(0,0,0,0.85); 
+        box-shadow: 0px 23px 26px -11px rgba(0,0,0,0.85);
+        }
+    }
 }
