--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -10,4 +10,5 @@
 {% include "partials/_matrix" %}
 
 {# {% include "partials/_video" %} #}
+{# {% include "partials/_cta" %} #}
 {% include "partials/_footer" %}
