--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -73,10 +73,13 @@ footer {
     display: block; } }
 
 #cta {
-  background-color: #343a40;
+  background-color: #6c757d;
   color: #fff; }
   #cta h1 {
     padding: 20px 0 40px; }
+  #cta a {
+    -webkit-box-shadow: 0px 23px 26px -11px rgba(0, 0, 0, 0.85);
+    box-shadow: 0px 23px 26px -11px rgba(0, 0, 0, 0.85); }
 
 .footer {
   background-color: #707070; }
@@ -104,6 +107,10 @@ footer {
   max-height: 400px;
   overflow: hidden; }
 
+.matrix-container .matrix-applyBlock a {
+  -webkit-box-shadow: 0px 23px 26px -11px rgba(0, 0, 0, 0.85);
+  box-shadow: 0px 23px 26px -11px rgba(0, 0, 0, 0.85); }
+
 .search-again {
   padding: 20px 0px; }
   .search-again .search-again-btn {
@@ -116,6 +123,12 @@ footer {
     background-image: url("/images/truck-jobs-2.jpg");
     background-position: bottom center;
     background-size: cover; }
+
+.card {
+  -webkit-box-shadow: 0px 26px 34px -12px #000000;
+  box-shadow: 0px 26px 34px -12px #000000; }
+  .card .card-title {
+    color: #6c757d; }
 
 #search-header {
   height: 400px;
@@ -130,7 +143,9 @@ footer {
     text-shadow: 0px 0px 12px #000000; }
 
 .jobs-index {
-  background-color: #E2E2E2; }
+  -webkit-box-shadow: inset 0px 0px 40px -2px rgba(0, 0, 0, 0.39);
+  -moz-box-shadow: inset 0px 0px 40px -2px rgba(0, 0, 0, 0.39);
+  box-shadow: inset 0px 0px 40px -2px rgba(0, 0, 0, 0.39); }
   .jobs-index h3 {
     font-weight: bold; }
   .jobs-index .job-header {
