--- a/templates/partials/_parallax.twig
+++ b/templates/partials/_parallax.twig
@@ -1,23 +1,34 @@
 <!-- PARALLAX -->
-  <div class="text-center text-md-right pb-5 parallax">
-    <div class="container">
-      <div class="row">
-        <div class="p-5 mx-auto mx-md-0 ml-md-auto col-8 col-md-7">        
+<div class="pb-5 parallax">
+  <div class="container p-5">
+    <div class="row">
+
+<div class="col-sm-12 col-md-6">
         {# HEADLINE #}
-          {% if entry.homeHeadline %}
-          <h1 class="h1 text-white">{{entry.homeHeadline}}</h1>
-          {% else %}
-          <h1 class="h1 text-white">{{global.homeHeadline}}</h1>
-          {% endif %}
+        {% if entry.homeHeadline %}
+        <h1 class="h1 text-white">{{entry.homeHeadline}}</h1>
+        {% else %}
+        <h1 class="h1 text-white">{{global.homeHeadline}}</h1>
+        {% endif %}
 
-          {# subHeadline #}
-          {% if entry.subHeadline %}
-          <p class="mb-3">{{entry.subHeadline}}</p>
-          {% else %}
-          <p class="mb-3">{{global.subHeadline}}</p>
-          {% endif %}
+        {# subHeadline #}
+        {% if entry.subHeadline %}
+        <p class="mb-3">{{entry.subHeadline}}</p>
+        {% else %}
+        <p class="mb-3">{{global.subHeadline}}</p>
+        {% endif %}
 
-        </div>
       </div>
+
+
+      <div class="col-sm-12 col-md-6 text-right">        
+        <img class="mt-3" src="/images/conversion-logo.png" alt="" height="75">
+        {# <div class="mt-5">
+          <a href="" class="btn btn-success btn-lg">Apply Now</a>
+        </div> #}
+      </div>
+
+      
     </div>
   </div>
+</div>
