--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -47,6 +47,10 @@
   -webkit-box-shadow: 0px 26px 34px -12px #000000;
   box-shadow: 0px 26px 34px -12px #000000; }
 
+.video-container .video-shadow {
+  box-shadow: 0px 26px 34px -12px #000000;
+  -webkit-box-shadow: 0px 26px 34px -12px #000000; }
+
 #jobs-benefits .jobs-benefits-col {
   background-color: #292F31; }
   #jobs-benefits .jobs-benefits-col .jobs-benefits-header {
