adding lance's changes

--- a/SCSS/sections/partials/_cards-section.scss
+++ b/SCSS/sections/partials/_cards-section.scss
@@ -23,7 +23,7 @@
 
         .applyBanner {
             background-color: #707070;
-            border-radius: 10px;
+            // border-radius: 10px;
 
         }
     }
