--- a/SCSS/sections/partials/_indexFeatures.scss
+++ b/SCSS/sections/partials/_indexFeatures.scss
@@ -1,6 +1,9 @@
 .feature-section{
+    .display-4{
+        font-weight: 500 !important;
+    }
     img{
-        -webkit-box-shadow: 0px 26px 34px -12px #000000;
-         box-shadow: 0px 26px 34px -12px #000000;
+        -webkit-box-shadow: 0px 26px 34px -30px #000000;
+         box-shadow: 0px 26px 34px -30px #000000;
     }
 }
