--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -107,7 +107,7 @@
                              </div>
                              <div class="col-md-4 offset-md-4">
                                  <div class="form-group">
-                                     <button type="submit" value="Search" class="btn btn-primary btn-block"> 
+                                     <button type="submit" value="Search" class="btn btn-success btn-lg btn-block"> 
                                      <i class="fas fa-search"></i> Search</button>
                                  </div>
                              </div>
