--- a/templates/partials/_cards.twig
+++ b/templates/partials/_cards.twig
@@ -7,7 +7,7 @@
             <div class="col-md-12 pb-5">                
                 
               <h3 class="text-secondary header-shadow p-2"><i class="fa fa-user"></i> &nbsp; {{entry.offeringHeadline}}</h3>
-              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-outline-success btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
           </div>
@@ -16,7 +16,7 @@
           <div class="row py-2 mx-auto" style="">
             <div class="col-md-12 pb-5">
               <h3 class="text-secondary header-shadow p-2"><i class="fa fa-truck"></i>&nbsp; {{entry.qualificationHeadline}}</h3>
-              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-outline-success btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
             </div>
           </div>
         </div>
