--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -27,7 +27,8 @@
             {{page.title}}                             
             </a></li>
         {% endnav %}
-        <li>{% include "search/index" %}</li>
+        {# <li>{% include "search/index" %}</li> #}
+          <li><a href="/jobs" class="btn btn-success">Apply Now</a></li>
       </ul>
     </div>
   </div>
