--- a/templates/partials/_parallax.twig
+++ b/templates/partials/_parallax.twig
@@ -5,11 +5,11 @@
 
 <div class="col-sm-12 col-md-6">
         {# HEADLINE #}
-        {% if entry.homeHeadline %}
+        {# {% if entry.homeHeadline %}
         <h1 class="h1 text-white">{{entry.homeHeadline}}</h1>
         {% else %}
         <h1 class="h1 text-white">{{global.homeHeadline}}</h1>
-        {% endif %}
+        {% endif %} #}
 
         {# subHeadline #}
         {% if entry.subHeadline %}
