--- a/SCSS/sections/partials/_video.scss
+++ b/SCSS/sections/partials/_video.scss
@@ -1,13 +1,13 @@
 .video-container{
     .video-shadow{
-        box-shadow: 0px 26px 34px -12px #000000;
-        -webkit-box-shadow: 0px 26px 34px -12px #000000;
+        box-shadow: 0px 26px 34px -30px #000000;
+        -webkit-box-shadow: 0px 26px 34px -30px #000000;
 
     }
     .video-content{
         // background-color: #fff;
-        h1{
-            // font-weight: 400;
+        .display-4{
+            font-weight: 400 !important;
         }
     }
 }
