--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -8,7 +8,7 @@
                 
               <h3 class="text-secondary header-shadow p-2"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverviewHeader}}</h3>
               <p class="lead">{{entry.companyOverview}}</p>
-              <a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+              <a class="btn btn-outline-success btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
           </div>
