--- a/templates/partials/_cta.twig
+++ b/templates/partials/_cta.twig
@@ -4,7 +4,7 @@
               <div class="row">
                   <div class="mx-auto col-md-12">
                       <h1 class="display-4">Ready to join the best carrier to boost your driving career?</h1> 
-                      <a class="btn btn-success btn-lg" href="#"><i class="fas fa-handshake"></i> &nbsp;TAKE ME THERE</a>
+                      <a class="btn btn-success btn-lg" href="/forms"><i class="fas fa-handshake"></i> &nbsp;TAKE ME THERE</a>
                   </div>
               </div>
           </div>
