--- a/templates/partials/_matrix.twig
+++ b/templates/partials/_matrix.twig
@@ -7,10 +7,12 @@
     {% case "textBlock" %}
     <div class="p-2" style="background-color:{{block.bgColor}}">
         <div class="container matirx-textBlock py-5">
-            <h3 class="display-4 text-secondary">{{block.header}}</h3>
-            <div>{{block.textArea}}</div>
+            <h3 class="display-4 text-secondary text-center">{{block.header}}</h3>
+            <div class="p-4">{{block.textArea}}</div>
             {% if block.ctaLink is not empty %}
-            <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
+            <div class="text-center">
+            <a href="{{block.ctaLink}}" class="btn btn-success btn-lg"><i class="fas fa-handshake"></i>&nbsp; {{block.cta}}</a>
+            </div>
             {% endif %}
         </div>
     </div>
@@ -25,7 +27,7 @@
                     <p class="display-4 text-secondary text-center">{{block.imageCaption}}</p>
                     <img src=" {{block.image.one().getUrl() }} " alt="" class="img-fluid">
                     {% if block.ctaLink is not empty %}
-                    <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
+                    <a href="{{block.ctaLink}}" class="btn btn-success btn-lg"><i class="fas fa-handshake"></i>&nbsp; {{block.cta}}</a>
                     {% endif %}
                 </div>
             </div>
@@ -38,15 +40,15 @@
     <div class="p-2" style="background-color:{{block.bgColor}}">
         <div class="container matrix-left py-5">
             <div class="row">
-                <div class="col-sm-12 col-md-7 py-3">
+                <div class="col-sm-12 col-md-6 py-3">
                     <h3 class="display-4 text-secondary">{{block.header}}</h3>
-                    <div>{{block.textArea}}</div>
+                    <div class="p-4">{{block.textArea}}</div>
                     {% if block.ctaLink is not empty %}
-                    <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
+                    <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg"><i class="fas fa-handshake"></i>&nbsp; {{block.cta}}</a>
                     {% endif %}
                 </div>
-                <div class="col-sm-12 col-md-4 offset-md-1 text-center"
-                    style="min-height:200px; background-image:url({{block.imageRight.one().getUrl()}}); background-size:cover; background-position:center;  background-repeat: no-repeat; -webkit-box-shadow: 0px 26px 34px -12px #000000; box-shadow: 0px 26px 34px -12px #000000;">
+                <div class="col-sm-12 col-md-4 offset-md-2 text-center"
+                    style="min-height:200px; max-height:500px !important; background-image:url({{block.imageRight.one().getUrl()}}); background-size:cover; background-position:center;  background-repeat: no-repeat; -webkit-box-shadow: 0px 26px 34px -30px #000000; box-shadow: 0px 26px 34px -30px #000000;">
                     {% if block.imageRight is not empty %}
                     {# <img src="{{block.imageRight.one().getUrl() }}" alt="" class="img-fluid"> #}
                     {% endif %}
@@ -62,16 +64,16 @@
         <div class="container matrix-right py-5">
             <div class="row">
                 <div class="col-sm-12 col-md-4 text-center"
-                    style="margin-top:-10px; min-height:200px; background-image:url({{block.imageLeft.one().getUrl()}}); background-size:cover; background-position:center;  background-repeat: no-repeat; -webkit-box-shadow: 0px 26px 34px -12px #000000; box-shadow: 0px 26px 34px -12px #000000;">
+                    style="margin-top:-10px; min-height:200px; max-height:500px !important; background-image:url({{block.imageLeft.one().getUrl()}}); background-size:cover; background-position:center;  background-repeat: no-repeat; -webkit-box-shadow: 0px 26px 34px -30px #000000; box-shadow: 0px 26px 34px -30px #000000;">
                     {% if block.imageLeft is not empty %}
                     {# <img src="{{block.imageLeft.one().getUrl()}}" alt="" class="img-fluid"> #}
                     {% endif %}
                 </div>
-                <div class="col-sm-12 col-md-7 offset-md-1 pt-3">
+                <div class="col-sm-12 col-md-6 offset-md-2 pt-3">
                     <h3 class="display-4 text-secondary pt-5">{{block.header}}</h3>
-                    <div>{{block.textArea}}</div>
+                    <div class="p-4">{{block.textArea}}</div>
                     {% if block.ctaLink is not empty %}
-                    <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
+                    <a href="{{block.ctaLink}}" class="btn btn-success btn-lg"><i class="fas fa-handshake"></i>&nbsp; {{block.cta}}</a>
                     {% endif %}
                 </div>
             </div>
@@ -86,8 +88,8 @@
               <div class="row">
                   <div class="mx-auto col-md-12">
                       <h1 class="display-4">{{block.applyHeader}}</h1> 
-                      <p>{{block.applyContent}}</p>
-                      <a class="btn btn-success btn-lg" href="{{block.applyLink}}"><i class="fas fa-handshake"></i> &nbsp;{{block.applyText}}</a>
+                      <p class="p-4">{{block.applyContent}}</p>
+                      <a class="btn btn-success btn-lg" href="{{block.applyLink}}"><i class="fas fa-handshake"></i>&nbsp; {{block.applyText}}</a>
                   </div>
               </div>
           </div>
