--- a/SCSS/sections/partials/_cta.scss
+++ b/SCSS/sections/partials/_cta.scss
@@ -1,6 +1,8 @@
 #cta{
     // background-color: #343a40;
-    background-color: #6c757d;
+    // background-color: #6c757d;
+    background-image: linear-gradient(to right bottom, #000000, #140b11, #1b1520, #1a1e31, #082941);
+    // background-image: linear-gradient(to top, #343a40, #2b3640, #223241, #172d41, #082941);
     color: #fff;
     h1{
         padding: 20px 0 40px;
