--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -1,6 +1,7 @@
 {# INDIVIDUAL PAGE ENTRY TEMPLATE #}
 
 {% include "partials/_header" %}
+{% include "partials/_seo" %}
 {% include "partials/_nav" %}
 {% include "partials/_parallax" %}
 {% include "partials/_cards-page" %}
