--- a/templates/partials/_seo.twig
+++ b/templates/partials/_seo.twig
@@ -1,12 +1,13 @@
      {# keywords #}
     {% if entry.keywordTags is not empty %}      
         {% set entries = entry %}
-            <meta name="keywords" content="{% for tag in craft.tags.relatedTo(entries) %}{{ tag.title }} {% endfor %}">
+            <meta name="keywords" content="{% for tag in craft.tags.relatedTo(entries).all() %}{{ tag.title }} {% endfor %}">
         {% else %}   
             {% set myTagQuery = craft.tags().group('globalTags') %}
             {% set tags = myTagQuery.all() %} 
             <meta name="keywords"  content="{% for tag in tags %} {{ tag.title }} {% endfor %}">
     {% endif %}
+    
     {# meta description #}
     {% if entry.metaDescription %}
             <meta name="description" content="{{entry.metaDescription}}">
@@ -15,7 +16,7 @@
     {% endif %}
     {# title tag #}
     {% if entry.titleTag %}
-            <title>{{entry.titleTag}}</title>
+            <title>{{entry.title}}</title>
         {% else %}
             <title>{{global.titleTag}}</title>
     {% endif %}
