--- a/SCSS/sections/partials/_matrix.scss
+++ b/SCSS/sections/partials/_matrix.scss
@@ -7,7 +7,8 @@
         overflow: hidden;
 
         img{
-            -webkit-box-shadow: 0px 26px 34px -12px #000000; box-shadow: 0px 26px 34px -12px #000000;
+            -webkit-box-shadow: 0px 26px 34px -30px #000000; 
+            box-shadow: 0px 26px 34px -30px #000000;
         }
     }
 
