--- a/templates/jobs/infoBubble.twig
+++ b/templates/jobs/infoBubble.twig
@@ -1,7 +1,6 @@
-{% set segments = craft.app.request.segments %}
+{% set segments = craft.app.request.segments.all() %}
 
-{# {% set moreInfoUrl = '/'~segments[0]~'/'~segments[1]~'/'~element.slug~'/' %} #}
-{% set directionsUrl = craft.smartMap.directions(element.jobAddress, element.title) %}
+{% set directionsUrl = entry.jobAddress.directions(element.jobAddress, element.title) %}
 
 <h3>{{ element.title }}</h3>
 <div class="div">
