--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -1,9 +1,9 @@
 <!--CARDS-->
-  <div class="pb-1 bg-light" style="">
+  <div class="pb-5 bg-light" style="">
     <div class="container cards-section">
       <div class="row pb-2">
         <div class="col-md-8" style="">
-          <div class="row py-2 mx-auto" style="">
+          <div class="row mx-auto" style="">
             <div class="col-md-12 pb-5">                
                 
               <h3 class="text-secondary header-shadow p-2"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverviewHeader}}</h3>
