--- a/templates/jobs/searchjobs/infoBubble.twig
+++ b/templates/jobs/searchjobs/infoBubble.twig
@@ -1,6 +1,6 @@
-{% set segments = craft.request.segments %}
+{% set segments = craft.app.request.segments %}
 
-{% set directionsUrl = craft.smartMap.directions(element.jobAddress, element.title) %}
+{% set directionsUrl = element.jobAddress.directionsUrl(element.jobAddress, element.title) %}
 
 <h3>{{ element.title }}</h3>
 
