--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -28,7 +28,7 @@
             </a></li>
         {% endnav %}
         {# <li>{% include "search/index" %}</li> #}
-          <li><a href="/jobs" class="btn btn-success">Apply Now</a></li>
+          <li><a href="/forms" class="btn btn-success">Apply Now</a></li>
       </ul>
     </div>
   </div>
