--- a/templates/jobs/searchjobs/og-results.twig
+++ b/templates/jobs/searchjobs/og-results.twig
@@ -16,18 +16,19 @@ IN ORDER TO PREVENT TEMPLATE ERROR #}
 {% set range = craft.app.request.getParam('range') %}
 
 {# Here we set the criteria and combine all the parameter variables #}
-{% set criteria ={  
-    jobAddress:{ 
-        target:target,
-        range:range  
-    }       
+{% set criteria ={   
+        section: 'jobListings',     
+        state: state,
+        truckType: trucktype,
+        jobType: jobtype,
+        city: city,   
+                       
     } %}
 
     {# Pass the criteria object to the query builder: #}
-    {% set query = craft.entries.jobAddress(criteria) %}
-   
+    {% set query = craft.entries(criteria) %}
 
-        {# {% if target is not empty and range is not empty %}
+        {% if target is not empty and range is not empty %}
             {% set params = {
                 jobAddress:{
                 target: target,
@@ -36,14 +37,22 @@ IN ORDER TO PREVENT TEMPLATE ERROR #}
             } %}
         {% set query = craft.entries.jobAddress(params) %}
 
-        {% endif %} #}
+        {% endif %}
 
+
+    {# Set up pagination, and let it grab the current page's results: #}
+    {# Here we limit the cards by ever 6 entries but the map shows all jobs in searcg criteria #}
+    {% set newQuery = craft.entries(criteria).limit(6)%}
+
+    {% paginate newQuery as pageInfo, results %}
+        
+    {# CONDITIONAL IF THERE ARE RESULTS #}
+    {% if results|length %}
     {# We build the map location based on criteria #}
-    {% set mapQuery = craft.entries(criteria) %}
     <div class="container-fluid" id="map">
         <div class="row bg-secondary">
             <div class="col-sm-12 p-0">
-                {% set locations = mapQuery %}
+                {% set locations = query %}
                 {% set options = {     
                     height:400,
                     zoom: 5,
@@ -57,17 +66,6 @@ IN ORDER TO PREVENT TEMPLATE ERROR #}
             </div>
         </div>
     </div>
-
-    {# Set up pagination, and let it grab the current page's results: #}
-    {# Here we limit the cards by ever 6 entries but the map shows all jobs in searcg criteria #}
-    {% set newQuery = craft.entries(criteria).limit(6)%}
-    {{newQuery.count()}}
-
-    {% paginate newQuery as pageInfo, results %}
-        
-    {# CONDITIONAL IF THERE ARE RESULTS #}
-    {% if results %}
-
 
     {# DISPLAY Search Results #}
     <div class="container-fluid pt-5 pb-1 jobs-index">       
